fixes column gaps

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -138,12 +138,8 @@ main {
   padding: 4rem;
 }
 
-.row {
-  padding: 1rem 0;
-}
-
-.col {
-  margin-bottom: 1rem;
+.perf-col {
+  margin-bottom: 2rem;
 }
 
 .blog-stacked {
